# crs

./: .env  .env.example  Cargo.toml  README.md  api.http
actix/: Cargo.toml  docker-compose.yml
actix/migrations/2021-06-23-073141_create_users/: up.sql
actix/src/: errors.rs  main.rs  password.rs  token.rs
actix/src/middleware/: token.rs
actix/src/models/: user.rs
actix/src/routes/auth/: login.rs  mod.rs  reg.rs
actix/src/routes/private/: profile.rs
crs-axum-api/: .env.example  Cargo.toml
crs-axum-api/sql_mappers/: sql.html
crs-axum-api/src/: errors.rs  main.rs
crs-axum-api/src/service/: mod.rs
crs-axum-api/src/service/actions/: mod.rs
crs-axum-api/src/service/requests/: mod.rs
crs-axum-api/src/utils/: mod.rs  password.rs
crs-gotham/: Cargo.toml
crs-gotham/src/: main.rs
crs-gotham/src/service/db/: mod.rs
crs-gotham/src/service/dto/: mod.rs
crs-wrap-api/: Cargo.toml
crs-wrap-api/src/: main.rs
sql_mappers/: sql.html
src/: main.rs  password.rs  schema.rs  token.rs
src/middleware/: token.rs
src/models/: user.rs
src/routes/: mod.rs
src/routes/auth/: login.rs  reg.rs
