cargo-features = ["edition2021"]
[package]
edition = "2018"
name = "crm-web-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
argon2 = "0.2.1"
chrono = {version = "0.4.19", features = ["serde"]}
derive_more = "0.99.14"
dotenv = "0.15.0"
jsonwebtoken = {version = "7"}
lazy_static = "1.4.0"
rand_core = {version = "0.6", features = ["std"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = {version = "1.0.64"}
# sqlx = {version = "0.5", features = ["postgres", "macros", "runtime-actix-rustls", "chrono"]}
rbatis = {version = "2.0", features = ["postgres"]}
actix-service = "2.0.0"
futures = "0.3.15"

[dev-dependencies]
diesel = {version = "1.4.7", features = ["postgres"]}
