[package]
name = "crs-axum-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.0"
lazy_static = "1.4.0"
serde = {version="1.0.127", features=["derive"]}
tokio = {version="1.9.0", features=["rt","rt-multi-thread","macros"]}
rbatis = { version = "2.0.24", features = ["postgres"] }
serde_json = "1.0.66"
chrono = {version="0.4.19",features=["serde"]}
dotenv = "0.15.0"
thiserror = "1.0.26"
argon2 = "0.2.2"
rand_core = "0.6.3"
